docs(readme): update Readme (README.md)